--- a/index.html
+++ b/index.html
@@ -25,11 +25,6 @@
   </head>
   <body>
     <main class="main">
-      <!-- BG TOP -->
-      <div class="background__top">
-        <img src="images/bg-pattern-top.svg" alt="" />
-      </div>
-
       <!-- CARD -->
       <div class="card__container">
         <div class="banner">
@@ -50,25 +45,25 @@
         <hr class="line" />
 
         <!-- DATA -->
+        <!-- Followers -->
         <div class="data">
           <div class="category">
             <p class="data__title title">80K</p>
             <p class="category__type">Followers</p>
           </div>
 
+          <!-- Likes -->
           <div class="category">
             <p class="data__title title">803K</p>
             <p class="category__type">Likes</p>
           </div>
 
+          <!-- Photos -->
           <div class="category">
             <p class="data__title title">1.4K</p>
             <p class="category__type">Photos</p>
           </div>
         </div>
-      </div>
-      <div class="background__bottom">
-        <img src="images/bg-pattern-bottom.svg" alt="" />
       </div>
     </main>
 
